--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3155,6 +3155,7 @@ button:disabled,
 /* Header */
 /* line 949, ../sass/main.scss */
 #header {
+  height: 100vh;
   padding: 9em 0 9em 0 ;
   background-color: #4686a0;
   color: rgba(255, 255, 255, 0.75);
@@ -3246,20 +3247,20 @@ button:disabled,
 #header .icon.major {
   color: #ffffff;
 }
-/* line 960, ../sass/main.scss */
+/* line 961, ../sass/main.scss */
 #header h1 {
   margin: 0;
 }
-/* line 964, ../sass/main.scss */
+/* line 965, ../sass/main.scss */
 #header p {
   margin: 1em 0 0 0;
 }
-/* line 968, ../sass/main.scss */
+/* line 969, ../sass/main.scss */
 #header .actions {
   margin: 2.5em 0 0 0;
   position: relative;
 }
-/* line 972, ../sass/main.scss */
+/* line 973, ../sass/main.scss */
 #header .actions:after {
   background: #ffffff;
   content: '';
@@ -3269,7 +3270,7 @@ button:disabled,
   top: 100%;
   width: 1px;
 }
-/* line 983, ../sass/main.scss */
+/* line 984, ../sass/main.scss */
 #header .inner {
   -moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
   -webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
@@ -3287,7 +3288,7 @@ button:disabled,
   position: relative;
   z-index: 1;
 }
-/* line 991, ../sass/main.scss */
+/* line 992, ../sass/main.scss */
 #header .inner .actions {
   -moz-transition: -moz-transform 1.25s ease;
   -webkit-transition: -webkit-transform 1.25s ease;
@@ -3304,6 +3305,10 @@ button:disabled,
   opacity: 1;
 }
 /* line 999, ../sass/main.scss */
+#header .inner .app-logo {
+  width: 300px;
+}
+/* line 1004, ../sass/main.scss */
 #header:after {
   -moz-transition: opacity 1s ease;
   -webkit-transition: opacity 1s ease;
@@ -3319,7 +3324,7 @@ button:disabled,
   width: 100%;
 }
 
-/* line 1014, ../sass/main.scss */
+/* line 1019, ../sass/main.scss */
 body.is-loading #header .inner {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -3327,7 +3332,7 @@ body.is-loading #header .inner {
   transform: scale(1.05);
   opacity: 0;
 }
-/* line 1018, ../sass/main.scss */
+/* line 1023, ../sass/main.scss */
 body.is-loading #header .inner .actions {
   -moz-transform: translateY(30em);
   -webkit-transform: translateY(30em);
@@ -3335,13 +3340,13 @@ body.is-loading #header .inner .actions {
   transform: translateY(30em);
   opacity: 0;
 }
-/* line 1024, ../sass/main.scss */
+/* line 1029, ../sass/main.scss */
 body.is-loading #header:after {
   opacity: 1;
 }
 
 /* Footer */
-/* line 1032, ../sass/main.scss */
+/* line 1037, ../sass/main.scss */
 #footer {
   padding: 6em 0 6em 0 ;
   background-color: #4686a0;
@@ -3432,18 +3437,18 @@ body.is-loading #header:after {
 #footer .icon.major {
   color: #ffffff;
 }
-/* line 1041, ../sass/main.scss */
+/* line 1046, ../sass/main.scss */
 #footer .icons {
   margin: 0;
 }
-/* line 1045, ../sass/main.scss */
+/* line 1050, ../sass/main.scss */
 #footer .copyright {
   font-size: 0.8em;
   list-style: none;
   margin: 2em 0 0 0;
   padding: 0;
 }
-/* line 1051, ../sass/main.scss */
+/* line 1056, ../sass/main.scss */
 #footer .copyright li {
   border-left: solid 1px;
   display: inline-block;
@@ -3451,7 +3456,7 @@ body.is-loading #header:after {
   margin-left: 1em;
   padding: 0 0 0 1em;
 }
-/* line 1058, ../sass/main.scss */
+/* line 1063, ../sass/main.scss */
 #footer .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
@@ -3461,13 +3466,13 @@ body.is-loading #header:after {
 /* XLarge */
 @media screen and (max-width: 1680px) {
   /* Basic */
-  /* line 1073, ../sass/main.scss */
+  /* line 1078, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 14pt;
   }
 
   /* Header */
-  /* line 1079, ../sass/main.scss */
+  /* line 1084, ../sass/main.scss */
   #header {
     padding: 6em 0 6em 0 ;
   }
@@ -3475,22 +3480,22 @@ body.is-loading #header:after {
 /* Large */
 @media screen and (max-width: 1140px) {
   /* Basic */
-  /* line 1091, ../sass/main.scss */
+  /* line 1096, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 13pt;
   }
 
-  /* line 1096, ../sass/main.scss */
+  /* line 1101, ../sass/main.scss */
   h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
     display: none;
   }
 
   /* List */
-  /* line 1105, ../sass/main.scss */
+  /* line 1110, ../sass/main.scss */
   ul.major-icons li {
     padding: 2em;
   }
-  /* line 1108, ../sass/main.scss */
+  /* line 1113, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 8em;
     line-height: 8em;
@@ -3498,28 +3503,28 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1119, ../sass/main.scss */
+  /* line 1124, ../sass/main.scss */
   .main {
     padding: 4em 0 2em 0 ;
   }
-  /* line 1122, ../sass/main.scss */
+  /* line 1127, ../sass/main.scss */
   .main.style2 {
     background-attachment: scroll;
   }
 
   /* Header */
-  /* line 1129, ../sass/main.scss */
+  /* line 1134, ../sass/main.scss */
   #header {
     padding: 5em 0 5em 0 ;
     background-attachment: scroll;
   }
-  /* line 1133, ../sass/main.scss */
+  /* line 1138, ../sass/main.scss */
   #header br {
     display: inline;
   }
 
   /* Footer */
-  /* line 1140, ../sass/main.scss */
+  /* line 1145, ../sass/main.scss */
   #footer {
     padding: 4em 0 4em 0 ;
     background-attachment: scroll;
@@ -3528,11 +3533,11 @@ body.is-loading #header:after {
 /* Medium */
 @media screen and (max-width: 980px) {
   /* List */
-  /* line 1155, ../sass/main.scss */
+  /* line 1160, ../sass/main.scss */
   ul.major-icons li {
     padding: 2em;
   }
-  /* line 1158, ../sass/main.scss */
+  /* line 1163, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 7em;
     line-height: 7em;
@@ -3540,31 +3545,31 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1169, ../sass/main.scss */
+  /* line 1174, ../sass/main.scss */
   .main {
     padding: 5em 3em 3em 3em ;
   }
 
   /* Header */
-  /* line 1175, ../sass/main.scss */
+  /* line 1180, ../sass/main.scss */
   #header {
     padding: 8em 3em 8em 3em ;
   }
 
   /* Footer */
-  /* line 1181, ../sass/main.scss */
+  /* line 1186, ../sass/main.scss */
   #footer {
     padding: 5em 3em 5em 3em ;
   }
 
   /* One */
-  /* line 1187, ../sass/main.scss */
+  /* line 1192, ../sass/main.scss */
   #one {
     text-align: center;
   }
 
   /* Two */
-  /* line 1193, ../sass/main.scss */
+  /* line 1198, ../sass/main.scss */
   #two {
     text-align: center;
   }
@@ -3572,55 +3577,55 @@ body.is-loading #header:after {
 /* Small */
 @media screen and (max-width: 736px) {
   /* Basic */
-  /* line 1205, ../sass/main.scss */
+  /* line 1210, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 12pt;
   }
 
-  /* line 1209, ../sass/main.scss */
+  /* line 1214, ../sass/main.scss */
   h1 {
     font-size: 1.75em;
   }
 
-  /* line 1213, ../sass/main.scss */
+  /* line 1218, ../sass/main.scss */
   h2 {
     font-size: 1.5em;
   }
 
-  /* line 1217, ../sass/main.scss */
+  /* line 1222, ../sass/main.scss */
   h3 {
     font-size: 1.1em;
   }
 
-  /* line 1221, ../sass/main.scss */
+  /* line 1226, ../sass/main.scss */
   h4 {
     font-size: 1em;
   }
 
   /* List */
-  /* line 1229, ../sass/main.scss */
+  /* line 1234, ../sass/main.scss */
   ul.major-icons li {
     padding: 1.5em;
   }
-  /* line 1232, ../sass/main.scss */
+  /* line 1237, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 5em;
     line-height: 5em;
     width: 5em;
   }
-  /* line 1237, ../sass/main.scss */
+  /* line 1242, ../sass/main.scss */
   ul.major-icons li .icon:before {
     font-size: 42px;
   }
 
   /* Icon */
-  /* line 1248, ../sass/main.scss */
+  /* line 1253, ../sass/main.scss */
   .icon.major {
     margin: 0 0 1em 0;
   }
 
   /* Button */
-  /* line 1255, ../sass/main.scss */
+  /* line 1260, ../sass/main.scss */
   input[type="submit"],
   input[type="reset"],
   input[type="button"],
@@ -3631,23 +3636,23 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1266, ../sass/main.scss */
+  /* line 1271, ../sass/main.scss */
   .main {
     padding: 3em 1.5em 1em 1.5em ;
   }
 
   /* Header */
-  /* line 1272, ../sass/main.scss */
+  /* line 1277, ../sass/main.scss */
   #header {
     padding: 4em 3em 4em 3em ;
   }
-  /* line 1275, ../sass/main.scss */
+  /* line 1280, ../sass/main.scss */
   #header .actions {
     margin: 2em 0 0 0;
   }
 
   /* Footer */
-  /* line 1282, ../sass/main.scss */
+  /* line 1287, ../sass/main.scss */
   #footer {
     padding: 3em 1.5em 3em 1.5em ;
   }
@@ -3655,41 +3660,41 @@ body.is-loading #header:after {
 /* XSmall */
 @media screen and (max-width: 480px) {
   /* List */
-  /* line 1295, ../sass/main.scss */
+  /* line 1300, ../sass/main.scss */
   ul.actions {
     margin: 0 0 2em 0;
   }
-  /* line 1298, ../sass/main.scss */
+  /* line 1303, ../sass/main.scss */
   ul.actions li {
     display: block;
     padding: 1em 0 0 0;
     text-align: center;
     width: 100%;
   }
-  /* line 1304, ../sass/main.scss */
+  /* line 1309, ../sass/main.scss */
   ul.actions li:first-child {
     padding-top: 0;
   }
-  /* line 1308, ../sass/main.scss */
+  /* line 1313, ../sass/main.scss */
   ul.actions li > * {
     margin: 0 !important;
     width: 100%;
   }
-  /* line 1313, ../sass/main.scss */
+  /* line 1318, ../sass/main.scss */
   ul.actions li > *.icon:before {
     margin-left: -2em;
   }
-  /* line 1321, ../sass/main.scss */
+  /* line 1326, ../sass/main.scss */
   ul.actions.small li {
     padding: 0.5em 0 0 0;
   }
-  /* line 1324, ../sass/main.scss */
+  /* line 1329, ../sass/main.scss */
   ul.actions.small li:first-child {
     padding-top: 0;
   }
 
   /* Button */
-  /* line 1334, ../sass/main.scss */
+  /* line 1339, ../sass/main.scss */
   input[type="submit"],
   input[type="reset"],
   input[type="button"],
@@ -3698,38 +3703,38 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1343, ../sass/main.scss */
+  /* line 1348, ../sass/main.scss */
   .main {
     padding: 2em 1.5em 0.1em 1.5em ;
   }
 
   /* Header */
-  /* line 1349, ../sass/main.scss */
+  /* line 1354, ../sass/main.scss */
   #header {
     padding: 4em 2em 4em 2em ;
   }
-  /* line 1352, ../sass/main.scss */
+  /* line 1357, ../sass/main.scss */
   #header br {
     display: none;
   }
 
   /* Footer */
-  /* line 1359, ../sass/main.scss */
+  /* line 1364, ../sass/main.scss */
   #footer {
     padding: 2em 1.5em 2em 1.5em ;
   }
-  /* line 1362, ../sass/main.scss */
+  /* line 1367, ../sass/main.scss */
   #footer .copyright {
     margin: 1.5em 0 0 0;
   }
-  /* line 1365, ../sass/main.scss */
+  /* line 1370, ../sass/main.scss */
   #footer .copyright li {
     border: 0;
     display: block;
     margin: 1em 0 0 0;
     padding: 0;
   }
-  /* line 1371, ../sass/main.scss */
+  /* line 1376, ../sass/main.scss */
   #footer .copyright li:first-child {
     margin-top: 0;
   }
@@ -3737,25 +3742,25 @@ body.is-loading #header:after {
 /* XXSmall */
 @media screen and (max-width: 320px) {
   /* Basic */
-  /* line 1386, ../sass/main.scss */
+  /* line 1391, ../sass/main.scss */
   html, body {
     min-width: 320px;
   }
 
   /* Main */
-  /* line 1392, ../sass/main.scss */
+  /* line 1397, ../sass/main.scss */
   .main {
     padding: 2em 1em 0.1em 1em ;
   }
 
   /* Header */
-  /* line 1398, ../sass/main.scss */
+  /* line 1403, ../sass/main.scss */
   #header {
     padding: 3em 1em 3em 1em ;
   }
 
   /* Footer */
-  /* line 1404, ../sass/main.scss */
+  /* line 1409, ../sass/main.scss */
   #footer {
     padding: 2em 1em 2em 1em ;
   }
