--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3350,7 +3350,20 @@ button:disabled,
   width: 100%;
 }
 
-/* line 1044, ../sass/main.scss */
+/* line 1043, ../sass/main.scss */
+#how-it-works h1 {
+  margin-bottom: 0;
+}
+/* line 1047, ../sass/main.scss */
+#how-it-works p {
+  margin-bottom: 4em;
+}
+/* line 1051, ../sass/main.scss */
+#how-it-works .image.fit {
+  margin-bottom: 1em;
+}
+
+/* line 1058, ../sass/main.scss */
 body.is-loading #header .inner {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
@@ -3358,7 +3371,7 @@ body.is-loading #header .inner {
   transform: scale(1.05);
   opacity: 0;
 }
-/* line 1048, ../sass/main.scss */
+/* line 1062, ../sass/main.scss */
 body.is-loading #header .inner .actions {
   -moz-transform: translateY(30em);
   -webkit-transform: translateY(30em);
@@ -3366,13 +3379,13 @@ body.is-loading #header .inner .actions {
   transform: translateY(30em);
   opacity: 0;
 }
-/* line 1054, ../sass/main.scss */
+/* line 1068, ../sass/main.scss */
 body.is-loading #header:after {
   opacity: 1;
 }
 
 /* Footer */
-/* line 1062, ../sass/main.scss */
+/* line 1076, ../sass/main.scss */
 #footer {
   padding: 6em 0 6em 0 ;
   background-color: #4686a0;
@@ -3463,18 +3476,18 @@ body.is-loading #header:after {
 #footer .icon.major {
   color: #ffffff;
 }
-/* line 1071, ../sass/main.scss */
+/* line 1085, ../sass/main.scss */
 #footer .icons {
   margin: 0;
 }
-/* line 1075, ../sass/main.scss */
+/* line 1089, ../sass/main.scss */
 #footer .copyright {
   font-size: 0.8em;
   list-style: none;
   margin: 2em 0 0 0;
   padding: 0;
 }
-/* line 1081, ../sass/main.scss */
+/* line 1095, ../sass/main.scss */
 #footer .copyright li {
   border-left: solid 1px;
   display: inline-block;
@@ -3482,7 +3495,7 @@ body.is-loading #header:after {
   margin-left: 1em;
   padding: 0 0 0 1em;
 }
-/* line 1088, ../sass/main.scss */
+/* line 1102, ../sass/main.scss */
 #footer .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
@@ -3492,13 +3505,13 @@ body.is-loading #header:after {
 /* XLarge */
 @media screen and (max-width: 1680px) {
   /* Basic */
-  /* line 1103, ../sass/main.scss */
+  /* line 1117, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 14pt;
   }
 
   /* Header */
-  /* line 1109, ../sass/main.scss */
+  /* line 1123, ../sass/main.scss */
   #header {
     padding: 6em 0 6em 0 ;
   }
@@ -3506,22 +3519,22 @@ body.is-loading #header:after {
 /* Large */
 @media screen and (max-width: 1140px) {
   /* Basic */
-  /* line 1121, ../sass/main.scss */
+  /* line 1135, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 13pt;
   }
 
-  /* line 1126, ../sass/main.scss */
+  /* line 1140, ../sass/main.scss */
   h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
     display: none;
   }
 
   /* List */
-  /* line 1135, ../sass/main.scss */
+  /* line 1149, ../sass/main.scss */
   ul.major-icons li {
     padding: 2em;
   }
-  /* line 1138, ../sass/main.scss */
+  /* line 1152, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 8em;
     line-height: 8em;
@@ -3529,28 +3542,28 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1149, ../sass/main.scss */
+  /* line 1163, ../sass/main.scss */
   .main {
     padding: 4em 0 2em 0 ;
   }
-  /* line 1152, ../sass/main.scss */
+  /* line 1166, ../sass/main.scss */
   .main.style2 {
     background-attachment: scroll;
   }
 
   /* Header */
-  /* line 1159, ../sass/main.scss */
+  /* line 1173, ../sass/main.scss */
   #header {
     padding: 5em 0 5em 0 ;
     background-attachment: scroll;
   }
-  /* line 1163, ../sass/main.scss */
+  /* line 1177, ../sass/main.scss */
   #header br {
     display: inline;
   }
 
   /* Footer */
-  /* line 1170, ../sass/main.scss */
+  /* line 1184, ../sass/main.scss */
   #footer {
     padding: 4em 0 4em 0 ;
     background-attachment: scroll;
@@ -3559,11 +3572,11 @@ body.is-loading #header:after {
 /* Medium */
 @media screen and (max-width: 980px) {
   /* List */
-  /* line 1185, ../sass/main.scss */
+  /* line 1199, ../sass/main.scss */
   ul.major-icons li {
     padding: 2em;
   }
-  /* line 1188, ../sass/main.scss */
+  /* line 1202, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 7em;
     line-height: 7em;
@@ -3571,31 +3584,31 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1199, ../sass/main.scss */
+  /* line 1213, ../sass/main.scss */
   .main {
     padding: 5em 3em 3em 3em ;
   }
 
   /* Header */
-  /* line 1205, ../sass/main.scss */
+  /* line 1219, ../sass/main.scss */
   #header {
     padding: 8em 3em 8em 3em ;
   }
 
   /* Footer */
-  /* line 1211, ../sass/main.scss */
+  /* line 1225, ../sass/main.scss */
   #footer {
     padding: 5em 3em 5em 3em ;
   }
 
   /* One */
-  /* line 1217, ../sass/main.scss */
+  /* line 1231, ../sass/main.scss */
   #one {
     text-align: center;
   }
 
   /* Two */
-  /* line 1223, ../sass/main.scss */
+  /* line 1237, ../sass/main.scss */
   #two {
     text-align: center;
   }
@@ -3603,55 +3616,55 @@ body.is-loading #header:after {
 /* Small */
 @media screen and (max-width: 736px) {
   /* Basic */
-  /* line 1235, ../sass/main.scss */
+  /* line 1249, ../sass/main.scss */
   body, input, select, textarea {
     font-size: 12pt;
   }
 
-  /* line 1239, ../sass/main.scss */
+  /* line 1253, ../sass/main.scss */
   h1 {
     font-size: 1.75em;
   }
 
-  /* line 1243, ../sass/main.scss */
+  /* line 1257, ../sass/main.scss */
   h2 {
     font-size: 1.5em;
   }
 
-  /* line 1247, ../sass/main.scss */
+  /* line 1261, ../sass/main.scss */
   h3 {
     font-size: 1.1em;
   }
 
-  /* line 1251, ../sass/main.scss */
+  /* line 1265, ../sass/main.scss */
   h4 {
     font-size: 1em;
   }
 
   /* List */
-  /* line 1259, ../sass/main.scss */
+  /* line 1273, ../sass/main.scss */
   ul.major-icons li {
     padding: 1.5em;
   }
-  /* line 1262, ../sass/main.scss */
+  /* line 1276, ../sass/main.scss */
   ul.major-icons li .icon {
     height: 5em;
     line-height: 5em;
     width: 5em;
   }
-  /* line 1267, ../sass/main.scss */
+  /* line 1281, ../sass/main.scss */
   ul.major-icons li .icon:before {
     font-size: 42px;
   }
 
   /* Icon */
-  /* line 1278, ../sass/main.scss */
+  /* line 1292, ../sass/main.scss */
   .icon.major {
     margin: 0 0 1em 0;
   }
 
   /* Button */
-  /* line 1285, ../sass/main.scss */
+  /* line 1299, ../sass/main.scss */
   input[type="submit"],
   input[type="reset"],
   input[type="button"],
@@ -3662,23 +3675,23 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1296, ../sass/main.scss */
+  /* line 1310, ../sass/main.scss */
   .main {
     padding: 3em 1.5em 1em 1.5em ;
   }
 
   /* Header */
-  /* line 1302, ../sass/main.scss */
+  /* line 1316, ../sass/main.scss */
   #header {
     padding: 4em 3em 4em 3em ;
   }
-  /* line 1305, ../sass/main.scss */
+  /* line 1319, ../sass/main.scss */
   #header .actions {
     margin: 2em 0 0 0;
   }
 
   /* Footer */
-  /* line 1312, ../sass/main.scss */
+  /* line 1326, ../sass/main.scss */
   #footer {
     padding: 3em 1.5em 3em 1.5em ;
   }
@@ -3686,41 +3699,41 @@ body.is-loading #header:after {
 /* XSmall */
 @media screen and (max-width: 480px) {
   /* List */
-  /* line 1325, ../sass/main.scss */
+  /* line 1339, ../sass/main.scss */
   ul.actions {
     margin: 0 0 2em 0;
   }
-  /* line 1328, ../sass/main.scss */
+  /* line 1342, ../sass/main.scss */
   ul.actions li {
     display: block;
     padding: 1em 0 0 0;
     text-align: center;
     width: 100%;
   }
-  /* line 1334, ../sass/main.scss */
+  /* line 1348, ../sass/main.scss */
   ul.actions li:first-child {
     padding-top: 0;
   }
-  /* line 1338, ../sass/main.scss */
+  /* line 1352, ../sass/main.scss */
   ul.actions li > * {
     margin: 0 !important;
     width: 100%;
   }
-  /* line 1343, ../sass/main.scss */
+  /* line 1357, ../sass/main.scss */
   ul.actions li > *.icon:before {
     margin-left: -2em;
   }
-  /* line 1351, ../sass/main.scss */
+  /* line 1365, ../sass/main.scss */
   ul.actions.small li {
     padding: 0.5em 0 0 0;
   }
-  /* line 1354, ../sass/main.scss */
+  /* line 1368, ../sass/main.scss */
   ul.actions.small li:first-child {
     padding-top: 0;
   }
 
   /* Button */
-  /* line 1364, ../sass/main.scss */
+  /* line 1378, ../sass/main.scss */
   input[type="submit"],
   input[type="reset"],
   input[type="button"],
@@ -3729,38 +3742,38 @@ body.is-loading #header:after {
   }
 
   /* Main */
-  /* line 1373, ../sass/main.scss */
+  /* line 1387, ../sass/main.scss */
   .main {
     padding: 2em 1.5em 0.1em 1.5em ;
   }
 
   /* Header */
-  /* line 1379, ../sass/main.scss */
+  /* line 1393, ../sass/main.scss */
   #header {
     padding: 4em 2em 4em 2em ;
   }
-  /* line 1382, ../sass/main.scss */
+  /* line 1396, ../sass/main.scss */
   #header br {
     display: none;
   }
 
   /* Footer */
-  /* line 1389, ../sass/main.scss */
+  /* line 1403, ../sass/main.scss */
   #footer {
     padding: 2em 1.5em 2em 1.5em ;
   }
-  /* line 1392, ../sass/main.scss */
+  /* line 1406, ../sass/main.scss */
   #footer .copyright {
     margin: 1.5em 0 0 0;
   }
-  /* line 1395, ../sass/main.scss */
+  /* line 1409, ../sass/main.scss */
   #footer .copyright li {
     border: 0;
     display: block;
     margin: 1em 0 0 0;
     padding: 0;
   }
-  /* line 1401, ../sass/main.scss */
+  /* line 1415, ../sass/main.scss */
   #footer .copyright li:first-child {
     margin-top: 0;
   }
@@ -3768,25 +3781,25 @@ body.is-loading #header:after {
 /* XXSmall */
 @media screen and (max-width: 320px) {
   /* Basic */
-  /* line 1416, ../sass/main.scss */
+  /* line 1430, ../sass/main.scss */
   html, body {
     min-width: 320px;
   }
 
   /* Main */
-  /* line 1422, ../sass/main.scss */
+  /* line 1436, ../sass/main.scss */
   .main {
     padding: 2em 1em 0.1em 1em ;
   }
 
   /* Header */
-  /* line 1428, ../sass/main.scss */
+  /* line 1442, ../sass/main.scss */
   #header {
     padding: 3em 1em 3em 1em ;
   }
 
   /* Footer */
-  /* line 1434, ../sass/main.scss */
+  /* line 1448, ../sass/main.scss */
   #footer {
     padding: 2em 1em 2em 1em ;
   }
