add app link in footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3311,30 +3311,7 @@ button:disabled,
   width: 300px;
   max-width: 60vw;
 }
-/* line 1006, ../sass/main.scss */
-#header .inner .app-link {
-  margin-top: 5vh;
-  max-width: 400px;
-  display: inline-block;
-}
-/* line 1011, ../sass/main.scss */
-#header .inner .app-link a {
-  text-decoration: none;
-  border: none;
-}
-/* line 1016, ../sass/main.scss */
-#header .inner .app-link a:hover img {
-  background-color: rgba(255, 255, 255, 0.125);
-}
-/* line 1022, ../sass/main.scss */
-#header .inner .app-link .app-store-logo, #header .inner .app-link .google-play-logo {
-  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  width: 100%;
-}
-/* line 1029, ../sass/main.scss */
+/* line 1007, ../sass/main.scss */
 #header:after {
   -moz-transition: opacity 1s ease;
   -webkit-transition: opacity 1s ease;
@@ -3347,6 +3324,30 @@ button:disabled,
   opacity: 0;
   position: absolute;
   top: 0;
+  width: 100%;
+}
+
+/* line 1020, ../sass/main.scss */
+.app-link {
+  margin-top: 5vh;
+  max-width: 400px;
+  display: inline-block;
+}
+/* line 1025, ../sass/main.scss */
+.app-link a {
+  text-decoration: none;
+  border: none;
+}
+/* line 1030, ../sass/main.scss */
+.app-link a:hover img {
+  background-color: rgba(255, 255, 255, 0.125);
+}
+/* line 1036, ../sass/main.scss */
+.app-link .app-store-logo, .app-link .google-play-logo {
+  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   width: 100%;
 }
 
