Converted to a Jekyll site

--- a/css/ie8.scss
+++ b/css/ie8.scss
@@ -1,3 +1,7 @@
+---
+# The dashes tell Jekyll to convert this file to css
+---
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
