--- a/css/ie9.scss
+++ b/css/ie9.scss
@@ -1,3 +1,7 @@
+---
+# The dashes tell Jekyll to convert this file to css
+---
+
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
