--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
   </ul>
   <ul class="copyright">
     <li>&copy; 2015 Letterbox</li>
-    <li><a href="/">Home</a></li>
-    <li><a href="/privacy">Privacy Policy</a></li>
-    <li><a href="/eula">EULA</a></li>
+    <li><a href="{{ site.baseurl }}">Home</a></li>
+    <li><a href="{{ site.baseurl }}/privacy">Privacy Policy</a></li>
+    <li><a href="{{ site.baseurl }}/eula">EULA</a></li>
   </ul>
 </section>
 
